[package]
name = "chrome_cookie_decryptor"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'     
lto = true         
codegen-units = 1  
panic = 'abort' 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.4.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde_json = "1.0.96"
base64 = "0.21.2"
winapi = { version = "0.3.6", features = ["wingdi", "winnt", "winuser", "libloaderapi", "combaseapi", "objbase", "shobjidl", "winerror", "dpapi", "winbase"] }
aes-gcm = "0.10.2"
tokio = { version = "1.28.2", features = ["full"] }

#[target.'cfg(target_os = "windows")'.features]
#default = ["windows"]