[package]
name = "cdd"
version = "0.1.2"
edition = "2021"

authors = ["Kirill Melkozerov <k.melkozerov@gmail.com>"]
license = "MIT"
repository = "https://github.com/1101-1/chrome_cookie_decryptor"

description = """
A windows simple, fast chrome_cookie_decryptor
"""

readme = "README.md"
categories = ["concurrency", "asynchronous"]
keywords = ["chrome", "cookie", "description", "decryptor"]


[profile.release]
opt-level = 'z'     
lto = true         
codegen-units = 1  
panic = 'abort' 


[[bin]]
name = "cdd"
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
whoami = "1.4.0"
rusqlite = { version = "0.29.0", default-features = false, features = ["bundled"] }
serde_json = "1.0.96"
base64 = "0.21.2"
winapi = { version = "0.3.6", features = ["wingdi", "winnt", "winuser", "dpapi", "winbase"] }
aes-gcm = "0.10.2"
tokio = { version = "1.28.2", features = ["rt", "io-util", "io-std", "macros", "fs", "sync", "rt-multi-thread"] }